// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tremor/ProgressBar > renders a default-variant track at 50% 1`] = `
<div
  aria-label="Progress bar"
  aria-valuemax="100"
  aria-valuenow="50"
  class="flex w-full items-center"
  role="progressbar"
>
  <div
    class="relative flex h-2 w-full items-center rounded-full bg-primary/20"
  >
    <div
      class="h-full flex-col rounded-full bg-primary"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`tremor/ProgressBar > renders a success variant with a label 1`] = `
<div
  aria-label="Progress bar"
  aria-valuemax="100"
  aria-valuenow="80"
  class="flex w-full items-center"
  role="progressbar"
>
  <div
    class="relative flex h-2 w-full items-center rounded-full bg-success/20"
  >
    <div
      class="h-full flex-col rounded-full bg-success"
      style="width: 80%;"
    />
  </div>
  <span
    class="ml-2 whitespace-nowrap text-sm font-medium leading-none text-foreground"
  >
    80% complete
  </span>
</div>
`;
